Remove heigh constraint on header grid layout to solve layout issue

--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ html {
 .dashboard-container {
   display: grid;
   grid-template-columns: auto 2fr;
-  grid-template-rows: 10rem 2fr;
+  grid-template-rows: auto 2fr;
   width: 105rem;
   height: 58rem;
   flex-shrink: 0;
@@ -158,6 +158,7 @@ html {
   background: rgba(255, 255, 255, 0.17);
   backdrop-filter: blur(4.400000095367432px);
   margin: 0 auto;
+  gap: 1em;
 }
 
 .side-bar {
@@ -253,7 +254,6 @@ a {
 .header {
   grid-column: 2 / end;
   grid-row: 1/2;
-  border: 1px solid red;
   display: grid;
   grid-template-columns: auto 2fr auto;
   grid-auto-flow: column;
@@ -329,10 +329,10 @@ a {
 }
 
 .main-container {
+  overflow: hidden;
   display: grid;
   grid-template-columns: 3fr auto;
-  grid-template-rows: auto 2fr;
-  border: 1px solid red;
+  grid-template-rows: auto 2fr 50px 1fr;
   gap: 1em;
 }
 
@@ -346,7 +346,6 @@ a {
   border-radius: 0.625rem;
   background: #121415;
   box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.2);
-  border: 1px solid red;
   padding: 2em;
 }
 
@@ -433,6 +432,7 @@ a {
   box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.2);
 }
 
+
 button > p {
   font-family: Roboto;
   font-size: 1.25rem;
@@ -470,6 +470,11 @@ button > p {
 
 .trading-btns-container button:last-child {
   color: #d24343;
+}
+
+.trade-panel-container {
+  display: flex;
+  grid-column: 1 / 2;
 }
 
 .trade-panel {
